--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "cube-ui": "^1.12.34",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -16,6 +17,12 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.10"
+  },
+  "transformModules": {
+    "cube-ui": {
+      "transform": "cube-ui/src/modules/${member}",
+      "kebabCase": true
+    }
   },
   "browserslist": [
     "> 1%",
