--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "serialize-javascript": ">=2.1.1",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "postcss-px2rem": "^0.3.0",
