--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "amfe-flexible": "^2.2.1",
     "core-js": "^3.4.3",
     "cube-ui": "~1.12.15",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "serialize-javascript": ">=2.1.1",
     "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.1",
     "@vue/cli-service": "^4.1.0",
     "postcss-px2rem": "^0.3.0",
+    "serialize-javascript": ">=2.1.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-cube-ui": "^0.2.5",
